manifests/podinfo/podinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  ports:
    - name: http
      port: 9898
      targetPort: http
    - name: http-metrics
      port: 9797
      targetPort: http-metrics
    - name: grpc
      port: 9999
      targetPort: grpc
  selector:
    app: podinfo
