manifests/podinfo/k6-loadtest-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k6-loadtest
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k6-loadtest
  egress:
    - toEndpoints:
        - matchLabels:
            app: podinfo
      toPorts:
        - ports:
            - port: "9898"
              protocol: TCP
